remove some parameterized thread pools
replace with new v thread per